# trading_tool

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  build.sh  engine.py  monitor.py  pyproject.toml  requirements.txt  research.ipynb  setup.py
include/: indicators.h  market_manager.h  thread_pool.h  trading_core.h
include/backtest/: backtest_engine.h  event_queue.h  execution_engine.h
include/core/: events.h  indicators.h  market_manager.h  trading_core.h
include/utils/: logger.h
notebooks/: research.ipynb
src/: CMakeLists.txt  bindings.cpp  indicators.cpp  market_manager.cpp  thread_pool.cpp  trading_core.cpp
src/backtest/: CMakeLists.txt  backtest_engine.cpp
src/core/: CMakeLists.txt  indicators.cpp  market_manager.cpp  thread_pool.cpp  trading_core.cpp
src/storage/: CMakeLists.txt
src/strategies/: CMakeLists.txt
src/utils/: CMakeLists.txt  logger.cpp
tests/: test_backtest_execution.py  test_determinism.py  test_engine_concurrency.py  test_event_queue.py  test_market_manager.py  test_slippage.py  test_system_flow.py
trading_bot/: __init__.py  engine.py  monitor.py  trading_tool.py
